--- a/vignettes/use_cases.Rmd
+++ b/vignettes/use_cases.Rmd
@@ -86,3 +86,21 @@ target <- "stressed"
 candidates <- c("started", "desserts", "rested")
 anagram(target, candidates)
 ```
+
+## Spongebob Case
+
+Make every second letter uppercase
+
+```{r}
+spongebob <- function(phrase) {
+  x <- chars(phrase)
+  odds <- seq(1, length(x), 2)
+  x[odds] <- toupper(x[odds])
+  string(x)
+}
+spongebob("you can't do anything useful with this package")
+```
+
+```{r, echo=FALSE}
+knitr::include_graphics("../man/figures/spongebob.jpg")
+```
